# ltc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  checks.yml  release_and_publish.yml
src/: app.rs  lib.rs  main.rs  models.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: utils.rs
