[package]
name = "ltc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
uuid = { version = "1.3.0", features = ["v4", "serde", "macro-diagnostics"] }
